force-app/main/default/objects/Volunteer_Info_DataLoad_Test__c/Volunteer_Info_DataLoad_Test__c.object-meta.xml
<CustomObject>
    <description
  >Testing for IMBs new child object to see if dataLoader.io will match the parent contact record</description>
    <label>Volunteer Info DataLoad Test</label>
    <nameField>
        <label>Volunteer Info DataLoad Test Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Volunteer Info DataLoad Tests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>