force-app/main/default/objects/Volunteer_Info_DataLoad_Test__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteer Info DataLoad Tests</relationshipLabel>
    <relationshipName>Volunteer_Info_DataLoad_Tests</relationshipName>
    <type>Lookup</type>
</CustomField>