force-app/main/default/objects/Volunteer_Info_DataLoad_Test__c/fields/Lastname__c.field-meta.xml
<CustomField>
    <fullName>Lastname__c</fullName>
    <label>Lastname</label>
    <length>55</length>
    <type>Text</type>
</CustomField>