force-app/main/default/objects/Volunteer_Info_DataLoad_Test__c/fields/Phone__c.field-meta.xml
<CustomField>
    <fullName>Phone__c</fullName>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>