force-app/main/default/objects/Volunteer_Info_DataLoad_Test__c/fields/Skills_Offered__c.field-meta.xml
<CustomField>
    <fullName>Skills_Offered__c</fullName>
    <label>Skills Offered</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>